Fixed bug #47601 (defined() requires class to exist when testing for class constants).

# Unifies behaviour with 5.3+